--- a/lib/css/core.css
+++ b/lib/css/core.css
@@ -3,7 +3,8 @@
 /* zoopri basic */
 html {
 	font-family: 'Noto Sans KR', sans-serif;
-	font-size: 14px;
+	font-size: 16px;
+	line-height: 1.5;
 }
 body {
 	overflow-x: hidden;
@@ -40,7 +41,6 @@ body {
 }
 
 /* specific */
-
 .zoopraxiscope-wide {
 	display: flex;
 	flex-direction: column;
@@ -53,13 +53,47 @@ body {
 }
 
 .zoopraxiscope-sticky p {
-	color:white;
+	font-size: 1rem;
 }
-
-/* .zoopraxiscope-sticky{
-	font-size: 100px;
-} */
 
 div.zoopraxiscope-sticky {
 	opacity: 0;
+}
+
+/* text */
+h1, .h1 {
+	font-size: 2.5rem;
+}
+h2, .h2 {
+	font-size: 2rem;
+}
+h3, .h3 {
+	font-size: 1.75rem;
+}
+h4, .h4 {
+	font-size: 1.5rem;
+}
+h5, .h5 {
+	font-size: 1.25rem;
+}
+h6, .h6 {
+	font-size: 1rem;
+}
+.text-box {
+	padding: 0 50px;
+}
+.text-left {
+	text-align: left;
+}
+.text-right {
+	text-align: right;
+}
+.text-center {
+	text-align: center;
+}
+.text-light {
+	color: #fff;
+}
+.text-dark {
+	color: #232323;
 }
