--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,32 @@
-html, body, div, h1, h2, h3, h4, h5, h6, p {
-	margin: 0;
-	padding: 0;
+html,
+body,
+div,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
 }
 #iu {
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 #story {
-	top: 20%;
+  top: 20%;
+}
+
+#epoc {
+  top: 20%;
 }
 
 #ui {
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
